# icaliada

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config-default.yml
.github/workflows/: ci.yml  push.yml
src/: lib.rs  main.rs  startup.rs
src/model/: datetime.rs  event.rs  mod.rs
src/model/timezone/: mod.rs  test-tz-moscow.ics  test-tz-new-york.ics
src/routes/: error_response.rs  feeds.rs  mod.rs  setup.rs
src/service/: config.rs  feeds.rs  mod.rs  utils.rs
templates/: feed.html
